@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Added a simple argument parser in baselib
   * Replaced pydoc.locate with a call to importlib to work around a QGIS issue
   * Fixed the encode/decode functions in baselib.python3compat
 
